<resources>
    <string name="app_name">Examen1</string>
    <string name="seleccion_la_fuente_de_los_datos">Seleccion la fuente de los datos</string>
    <string name="usar_database">Usar DATABASE</string>
    <string name="usar_web">Usar WEB</string>
    <string name="NoInternetErr1">No hay conexion a internet</string>
    <string name="idTitle">ID:</string>
    <string name="nombreTitle">Nombre:</string>
    <string name="image">Imagen</string>
    <string name="annadir">Añadir</string>
    <string name="borrar">borrar</string>
    <string name="ver_lista">Ver Lista</string>
    <string name="base_de_datos_ndicos">Base de datos:\n</string>
    <string name="exit">exit</string>
    <string name="delete">delete</string>
    <string name="Err1">No se permiten campos en blanco</string>
    <string name="actualizar">Actualizar</string>
    <string name="updateDone">\"Se ha actualizado el disco: %s del grupo: %s \"</string>
    <string name="updateFailed">\"El disco: %s del grupo: %s no existe \"</string>
    <string name="addDone">\"Se ha annadido el nombre: %s del grupo: %s \"</string>
    <string name="addFailed">\"El disco: %s del grupo: %s ya existe \"</string>
    <string name="deleteDone">\"Se ha borrado el disco: %s del grupo: %s \"</string>
    <string name="deleteFailed">\"El disco: %s del grupo: %s no existe \"</string>
    <string name="eliminar">Eliminar</string>
    <string name="votar">votar</string>
</resources>